# magnitude_estimation

./: .gitignore  EVALUATION_METHODOLOGY_COMPARISON.md  MAGNITUDE_MODELS_ANALYSIS.md  MODEL_ARCHITECTURES.md  README.md  TRAINING_HISTORY_PLOTTING_GUIDE.md  TRAINING_SCHEDULER_ANALYSIS.md  UMAMBA_ABLATION_STUDY.md  UMAMBA_V1_VS_V2_COMPARISON.md  ablation_study.sh  ablation_study1.sh  ablation_study2.sh  ablation_study_mamba_v3.sh  pyproject-cuda.txt  pyproject-mamba.txt  pyproject-win.txt  pyproject.toml
.github/: copilot-instructions.md
src/my_project/: main.py  unified_training.py
src/my_project/loaders/: data_loader.py  magnitude_labellers.py  utils.py
src/my_project/models/: eqt_mag.py  phasenet_mag.py
src/my_project/models/AMAG/: model.py  train.py
src/my_project/models/AMAG_v2/: evaluate.py  model.py  train.py
src/my_project/models/AMAG_v3/: evaluate.py  model.py  train.py
src/my_project/models/EQTransformer/: evaluate.py  model.py  train.py
src/my_project/models/EQTransformer_v2/: __init__.py  evaluate.py  model.py  train.py
src/my_project/models/MagNet/: __init__.py  evaluate.py  model.py  train.py
src/my_project/models/UMamba_mag/: evaluate.py  model.py  train.py
src/my_project/models/UMamba_mag_v2/: __init__.py  evaluate.py  model.py  train.py
src/my_project/models/UMamba_mag_v3/: README.md  __init__.py  evaluate.py  model.py  train.py
src/my_project/models/ViT/: evaluate.py  model.py  model_backup.py  train.py
src/my_project/models/phasenetLSTM/: model.py  modelv2.py  train.py
src/my_project/models/phasenet_mag/: __init__.py  evaluate.py  model.py  train.py
src/my_project/models/phasenet_mag_v2/: evaluate.py  model.py  train.py
src/my_project/tutorial/: tutorial.py
src/my_project/utils/: inspect_checkpoint.py  unified_training.py  utils.py
