[project]
name = "thesis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "scikit-learn>=1.7.2",
  "seisbench",
  # torch/torchvision chosen via extras below
]

[project.optional-dependencies]
# Select ONE of these with `uv sync --extra <name>`
cpu = [
  "torch>=2.5,<2.6",
  "torchvision>=0.20,<0.21",
]
gpu = [
  # CUDA 12.1 wheels for Linux/Windows with NVIDIA
  "torch==2.5.1+cu121",
  "torchvision==0.20.1+cu121",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/my_project"]

[tool.uv]
# ✅ Correct override syntax: list[str]
# Ensure macOS/arm64 never tries to resolve CUDA variants when pulled transitively (e.g., via seisbench)
override-dependencies = [
  "torch>=2.5,<2.6 ; sys_platform == 'darwin' and platform_machine == 'arm64'",
  "torchvision>=0.20,<0.21 ; sys_platform == 'darwin' and platform_machine == 'arm64'",
]

[tool.uv.sources]
# keep your custom seisbench source
seisbench = { git = "https://github.com/QuentonYeo/seisbench_usepkg_patch.git" }

# Make the CUDA index available; it’s only used when you request +cu121
[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true
